Fixed text-alignment of language selector

--- a/app/assets/stylesheets/app/application/base.scss
+++ b/app/assets/stylesheets/app/application/base.scss
@@ -550,6 +550,7 @@ form {
     a {
       @include link-colors($m-footer-link-color, $m-very-light-gray, $m-very-light-gray);
       text-decoration: none;
+      text-align: left;
     }
     text-align: right;
     @include make-xs-column(5);
